tests/compile_fail/free_non_pointer.olrn
fn main() -> void
{
    x := 42
    @free(x)
}
